<resources>
    <string name="app_name">User Profile</string>
    <string name="avatar">Avatar</string>
    <string name="user_profile_kotlin">User Profile Kotlin</string>
    <string name="picture_gallery">Open Picture Gallery</string>
    <string name="hint">hint</string>
    <string name="first_name">First Name</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <string name="last_name">Last name</string>
    <string name="full_name">Full Name</string>
    <string name="name">%1$s %2$s</string>
</resources>
